cleanup various inspection problems