@@ -12,6 +12,7 @@ import org.junit.jupiter.api.Test;
 
 import java.sql.SQLException;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Properties;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -106,7 +107,7 @@ class HoptimatorDdlUtilsIntegrationTest {
 
     ViewTable viewTable = HoptimatorDdlUtils.viewTable(
         context, "SELECT 1", impl,
-        Arrays.asList("DEFAULT"), Arrays.asList("DEFAULT", "myView"));
+            List.of("DEFAULT"), Arrays.asList("DEFAULT", "myView"));
 
     assertNotNull(viewTable);
   }
